--- a/www/index.html
+++ b/www/index.html
@@ -38,13 +38,13 @@
 
 			<div class="navbar-inverse menuPrincipal in">
 				<nav role="navigation" class="navbar-collapse">
-					aacc
+					Menu Principal
 				</nav>
 			</div>
 
 			<div class="navbar-inverse menuFiltro in">
 				<nav role="navigation" class="navbar-collapse">
-					aabb
+					Filtro
 				</nav>
 			</div>
 		</div>
