--- a/www/index.html
+++ b/www/index.html
@@ -8,7 +8,7 @@
 	<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
 	<link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
-	<link href="css/global.css" rel="stylesheet" type="text/css">
+	<link href="http://nex2.com.br/app/new/css/global.css" rel="stylesheet" type="text/css">
 
 	<script src="js/jquery-2.1.4.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
