ultimo teste externo
ultimo teste externo

--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,148 @@
 </head>
 
 <body>
-	
+	<header>
+		<div class="container">
+			<div class="pull-left">
+				<div class="navbar-header menuBar pull-left">
+					<button type="button" class="btnIcone btnMenuPrincipal pull-left"><span class="fa fa-bars"></span></button>
+				</div>
+
+				<div class="logotipo pull-left"><img src="imagens/logo.png"></div>
+			</div>
+			<div class="pull-right">
+				<div class="navbar-header pull-left">
+					<button type="button" class="btnIcone btnFiltro icone"><span class="fa fa-filter"></span></button>
+				</div>
+
+				<div class="navbar-header pull-left">
+					<button type="button" class="btnIcone icone"><span class="fa fa-search icone"></span></button>
+				</div>
+			</div>
+
+			<div class="navbar-inverse menuPrincipal in">
+				<nav role="navigation" class="navbar-collapse">
+					Menu Principal
+				</nav>
+			</div>
+
+			<div class="navbar-inverse menuFiltro in">
+				<nav role="navigation" class="navbar-collapse">
+					Filtro
+				</nav>
+			</div>
+		</div>
+	</header>
+
+	<div id="content">
+		<ul id="tabs" class="nav nav-tabs" data-tabs="tabs">
+			<li class="active"><a href="#proximas" data-toggle="tab">+ Próximas</a></li>
+			<li><a href="#openbar" data-toggle="tab">Open Bar</a></li>
+			<li><a href="#vip" data-toggle="tab">VIP</a></li>
+		</ul>
+		<div id="my-tab-content" class="tab-content">
+			<div class="tab-pane active" id="proximas">
+				<div class="lista">
+					<div class="itemLista">
+						<div class="clearfix">
+							<div class="imgLogo pull-left"><img src="imagens/logoLab.jpg" alt="Lab Club"></div>
+							<div class="infoGeral pull-left">
+								<h2>Lab Club</h2>
+								<div class="data">25/08/2015 / 22h</div>
+								<div class="festa">Bunker</div>
+								<div class="preco">Mínimo: R$25 / Máximo: R$60</div>
+							</div>
+						</div>
+						<div class="barraInfo clearfix">
+							<div class="tipo consuma"><span class="fa fa-smile-o"></span>Consuma</div>
+							<div class="tipo rank"><span class="fa fa-heart"></span>75%</div>
+							<div class="tipo distancia"><span class="fa fa-map-marker"></span>3.2Km</div>
+						</div>
+					</div>
+
+					<div class="itemLista">
+						<div class="clearfix">
+							<div class="imgLogo pull-left"><img src="imagens/logoBeco.jpg" alt="Lab Club"></div>
+							<div class="infoGeral pull-left">
+								<h2>Beco 203</h2>
+								<div class="data">25/08/2015 / 23h</div>
+								<div class="festa">ROCKNBEATS + Tinder + Adesivos Match  ( Y & X ) + Neon + Karaokê!</div>
+								<div class="preco">R$60</div>
+							</div>
+						</div>
+						<div class="barraInfo clearfix">
+							<div class="tipo openBar"><span class="fa fa-glass"></span>Open Bar</div>
+							<div class="tipo rank"><span class="fa fa-heart"></span>65%</div>
+							<div class="tipo distancia"><span class="fa fa-map-marker"></span>3.1Km</div>
+						</div>
+					</div>
+
+					<div class="itemLista">
+						<div class="clearfix">
+							<div class="imgLogo pull-left"><img src="imagens/logoDedge.jpg" alt="Lab Club"></div>
+							<div class="infoGeral pull-left">
+								<h2>D.EDGE</h2>
+								<div class="data">25/08/2015 / 23h</div>
+								<div class="festa">FREAKCHIC</div>
+								<div class="preco">Mínimo: R$0 / Máximo: R$60</div>
+							</div>
+						</div>
+						<div class="barraInfo clearfix">
+							<div class="tipo vip"><span class="fa fa-star"></span>VIP</div>
+							<div class="tipo consuma"><span class="fa fa-smile-o"></span>Open Bar</div>
+							<div class="tipo rank"><span class="fa fa-heart"></span>65%</div>
+							<div class="tipo distancia"><span class="fa fa-map-marker"></span>3.1Km</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="tab-pane" id="openbar">
+				<div class="lista">
+					<div class="itemLista">
+						<div class="clearfix">
+							<div class="imgLogo pull-left"><img src="imagens/logoBeco.jpg" alt="Lab Club"></div>
+							<div class="infoGeral pull-left">
+								<h2>Beco 203</h2>
+								<div class="data">25/08/2015 / 23h</div>
+								<div class="festa">ROCKNBEATS + Tinder + Adesivos Match  ( Y & X ) + Neon + Karaokê!</div>
+								<div class="preco">R$60</div>
+							</div>
+						</div>
+						<div class="barraInfo clearfix">
+							<div class="tipo openBar"><span class="fa fa-glass"></span>Open Bar</div>
+							<div class="tipo rank"><span class="fa fa-heart"></span>65%</div>
+							<div class="tipo distancia"><span class="fa fa-map-marker"></span>3.1Km</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="tab-pane" id="vip">
+				<div class="lista">
+					<div class="itemLista">
+						<div class="clearfix">
+							<div class="imgLogo pull-left"><img src="imagens/logoDedge.jpg" alt="Lab Club"></div>
+							<div class="infoGeral pull-left">
+								<h2>D.EDGE</h2>
+								<div class="data">25/08/2015 / 23h</div>
+								<div class="festa">FREAKCHIC</div>
+								<div class="preco">Mínimo: R$0 / Máximo: R$60</div>
+							</div>
+						</div>
+						<div class="barraInfo clearfix">
+							<div class="tipo vip"><span class="fa fa-star"></span>VIP</div>
+							<div class="tipo consuma"><span class="fa fa-smile-o"></span>Open Bar</div>
+							<div class="tipo rank"><span class="fa fa-heart"></span>65%</div>
+							<div class="tipo distancia"><span class="fa fa-map-marker"></span>3.1Km</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="blackout"></div>
+<div class="blackout2"></div>
 </body>
 
 </html>
