--- a/www/index.html
+++ b/www/index.html
@@ -13,76 +13,84 @@
 	<script src="libs/js/jquery/jquery-2.1.4.min.js"></script>
 	<script src="libs/js/bootstrap/bootstrap.min.js"></script>
 	<script src="js/global.js"></script>
+	<script src="js/fb.js"></script>
 	<script src="js/lista.json"></script>
 
 	
 </head>
 
 <body>
-	<header class="cabecalhoPrincipal">
-		<div class="blackout"></div>
-		<div class="blackout2"></div>
-		<div class="pull-left">
-			<div class="menuBar pull-left">
-				<button type="button" class="btnIcone btnMenuPrincipal pull-left"><span class="fa fa-bars"></span></button>
-			</div>
-
-			<div class="logotipo pull-left"><img src="imagens/logo.png"></div>
+	<div id="usuarioDeslogado">
+		<div class="btnLogin">
+			<fb:login-button scope="public_profile,email" onlogin="checkLoginState();" autologoutlink="true"></fb:login-button>
+			<span id="msg"></span>
 		</div>
-		<div class="pull-right">
+	</div>
+	<div id="usuarioLogado">
+		<header class="cabecalhoPrincipal">
+			<div class="blackout"></div>
+			<div class="blackout2"></div>
 			<div class="pull-left">
-				<button type="button" class="btnIcone btnFiltro icone"><span class="fa fa-filter"></span></button>
+				<div class="menuBar pull-left">
+					<button type="button" class="btnIcone btnMenuPrincipal pull-left"><span class="fa fa-bars"></span></button>
+				</div>
+
+				<div class="logotipo pull-left"><img src="imagens/logo.png"></div>
+			</div>
+			<div class="pull-right">
+				<div class="pull-left">
+					<button type="button" class="btnIcone btnFiltro icone"><span class="fa fa-filter"></span></button>
+				</div>
+
+				<div class="pull-left">
+					<button type="button" class="btnIcone btnBusca icone"><span class="fa fa-search icone"></span></button>
+				</div>
 			</div>
 
-			<div class="pull-left">
-				<button type="button" class="btnIcone btnBusca icone"><span class="fa fa-search icone"></span></button>
+			<div class="menuPrincipal in">
+				<div class="infoUsuario">
+					<div id="fotoUsuario"></div>
+					<div id="nomeUsuario"></div>
+				</div>
+				<fb:login-button scope="public_profile,email" onlogin="checkLoginState();" autologoutlink="true"></fb:login-button>
 			</div>
-		</div>
 
-		<div class="menuPrincipal in">
-			<nav role="navigation" class="">
-				Menu Principal
-			</nav>
-		</div>
-
-		<div class="menuFiltro in">
-			<nav role="navigation" class="">
+			<div class="menuFiltro in">
 				<h4>Filtro e Ordenação <span class="fa fa-check checkFiltro"></span></h4>
 				<h5>Localização</h5>
 				<ul class="filtro filtroLocal"></ul>
 				<h5>Gênero musical</h5>
 				<ul class="filtro filtroGenero"></ul>
-			</nav>
-		</div>
-		<div class="busca">
-			<input type="text" value="" placeholder="Buscar Baladas">
-			<label class="fechaBusca fa fa-close"></label>
-		</div>
-	</header>
+			</div>
+			<div class="busca">
+				<input type="text" value="" placeholder="Buscar Baladas">
+				<label class="fechaBusca fa fa-close"></label>
+			</div>
+		</header>
 
-	<div class="listaConteudo">
-		<ul id="tabs" class="nav nav-tabs" data-tabs="tabs">
-			<li class="active"><a href="#geral" data-toggle="tab">Geral</a></li>
-			<li><a href="#openbar" data-toggle="tab">Open Bar</a></li>
-			<li><a href="#vip" data-toggle="tab">VIP</a></li>
-		</ul>
-		<div class="tab-content">
-			<div class="tab-pane active" id="geral">
-				<div class="listaGeral"><div class="lista"></div></div>
-				<div class="listaFiltro"><div class="lista"></div><span class="semResultado"></span></div>
-				<div class="listaBusca"><div class="lista"></div><span class="semResultado"></span></div>
-			</div>
-			<div class="tab-pane" id="openbar">
-				<div class="listaGeral"><div class="lista"></div><span class="semResultado"></span></div>
-				<div class="listaFiltro"><div class="lista"></div><span class="semResultado"></span></div>
-			</div>
-			<div class="tab-pane" id="vip">
-				<div class="listaGeral"><div class="lista"></div><span class="semResultado"></span></div>
-				<div class="listaFiltro"><div class="lista"></div><span class="semResultado"></span></div>
+		<div class="listaConteudo">
+			<ul id="tabs" class="nav nav-tabs" data-tabs="tabs">
+				<li class="active"><a href="#geral" data-toggle="tab">Geral</a></li>
+				<li><a href="#openbar" data-toggle="tab">Open Bar</a></li>
+				<li><a href="#vip" data-toggle="tab">VIP</a></li>
+			</ul>
+			<div class="tab-content">
+				<div class="tab-pane active" id="geral">
+					<div class="listaGeral"><div class="lista"></div></div>
+					<div class="listaFiltro"><div class="lista"></div><span class="semResultado"></span></div>
+					<div class="listaBusca"><div class="lista"></div><span class="semResultado"></span></div>
+				</div>
+				<div class="tab-pane" id="openbar">
+					<div class="listaGeral"><div class="lista"></div><span class="semResultado"></span></div>
+					<div class="listaFiltro"><div class="lista"></div><span class="semResultado"></span></div>
+				</div>
+				<div class="tab-pane" id="vip">
+					<div class="listaGeral"><div class="lista"></div><span class="semResultado"></span></div>
+					<div class="listaFiltro"><div class="lista"></div><span class="semResultado"></span></div>
+				</div>
 			</div>
 		</div>
 	</div>
-
 </body>
 
 </html>
